[project]
name = "ios-env-py"
version = "0.1.0"
description = "CLI for running remote fastlane spaceauth and updating FASTLANE_SESSION."
requires-python = ">=3.10"
dependencies = [
    "paramiko>=3.4,<4",
]

[project.scripts]
spaceauth-cli = "main:main"

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
